overlays/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  name: argocd-redis
spec:
  template:
    spec:
      containers:
      # original redis:7.0.4-alpine
      - image: ghcr.io/bradfordwagner/redis-mirror:1.2.0-redis_7.0.14-alpine
        name: redis
