overlays/ingress.yaml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: argocd-server
#  namespace: argocd
#spec:
#  rules:
#    - host: localhost
#      http:
#        paths:
#          - backend:
#              service:
#                name: argocd-server
#                port:
#                  number: 80
#            path: /argocd
#            pathType: Prefix
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
#      match: Host(`argocd.example.com`)
      match: Host(`lcoalhost`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`localhost`) && Header(`Content-Type`, `application/grpc`)
#      match: Host(`argocd.example.com`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    certResolver: default
